--- a/Enter.Dashboard/wwwroot/index.html
+++ b/Enter.Dashboard/wwwroot/index.html
@@ -16,8 +16,8 @@
     <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
 </head>
 
-<body>
-    <div id="app" class="mobile:h-1 tablet:h-2">
+<body dir="rtl">
+    <div id="app" class="">
         <svg class="loading-progress">
             <circle r="40%" cx="50%" cy="50%" />
             <circle r="40%" cx="50%" cy="50%" />
