--- a/Enter.Dashboard/wwwroot/index.html
+++ b/Enter.Dashboard/wwwroot/index.html
@@ -12,7 +12,7 @@
 
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="_content/Enter.UI/dist/css/enter.css" rel="stylesheet" />
-    <link href="OptimumDashboard.styles.css" rel="stylesheet" />
+    <link href="ٍEnter.Dashbaord.styles.css" rel="stylesheet" />
 
     <link href="manifest.json" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
