--- a/Enter.Dashboard/wwwroot/index.html
+++ b/Enter.Dashboard/wwwroot/index.html
@@ -19,7 +19,7 @@
     <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
 </head>
 
-<body dir="rtl">
+<body >
     <div id="app" class="">
         <svg class="loading-progress">
             <circle r="40%" cx="50%" cy="50%" />
