--- a/Enter.Dashboard/wwwroot/index.html
+++ b/Enter.Dashboard/wwwroot/index.html
@@ -34,6 +34,7 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="fontawsome/js/all.js"></script>
+    <script src="_content/Enter.UI/dist/js/enter.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
 </body>
