--- a/Enter.Dashboard/wwwroot/index.html
+++ b/Enter.Dashboard/wwwroot/index.html
@@ -11,7 +11,7 @@
     <link href="css/app.css" rel="stylesheet" />
 
     <link rel="icon" type="image/png" href="favicon.png" />
-    <link href="_content/Enter.UI/dist/css/enter.css" rel="stylesheet" />
+    <link href="_content/Enter.UI/EnterUi.min.css" rel="stylesheet" />
     <link href="ٍEnter.Dashbaord.styles.css" rel="stylesheet" />
 
     <link href="manifest.json" rel="manifest" />
