--- a/example/Enter.Dashboard/wwwroot/index.html
+++ b/example/Enter.Dashboard/wwwroot/index.html
@@ -11,8 +11,7 @@
     <link href="css/app.css" rel="stylesheet" />
 
     <link rel="icon" type="image/png" href="favicon.png" />
-    <link href="_content/Enter.UI.Froala/EnterUi.Froala.min.css" rel="stylesheet" />
-    <link href="_content/Enter.UI/EnterUi.min.css" rel="stylesheet" />
+    <link href="_content/Enter.UI/css/Enter.Ui.min.css" rel="stylesheet" />
     <link href="ٍEnter.Dashbaord.styles.css" rel="stylesheet" />
 
     <link href="manifest.json" rel="manifest" />
