--- a/example/Enter.Dashboard/wwwroot/index.html
+++ b/example/Enter.Dashboard/wwwroot/index.html
@@ -2,39 +2,39 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta charset="utf-8"/>
+    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport"/>
     <title>OptimumDashboard</title>
-    <base href="/" />
-    <link href="fontawsome/css/all.css" rel="stylesheet" />
-    <link href="fonts/shabnam/font-face.css" rel="stylesheet" />
-    <link href="css/app.css" rel="stylesheet" />
+    <base href="/"/>
+    <link href="fontawsome/css/all.css" rel="stylesheet"/>
+    <link href="fonts/shabnam/font-face.css" rel="stylesheet"/>
+    <link href="css/app.css" rel="stylesheet"/>
 
-    <link rel="icon" type="image/png" href="favicon.png" />
-    <link href="_content/Enter.UI/css/Enter.Ui.min.css" rel="stylesheet" />
-    <link href="ٍEnter.Dashbaord.styles.css" rel="stylesheet" />
+    <link href="favicon.png" rel="icon" type="image/png"/>
+    <link href="_content/Enter.UI/css/Enter.Ui.min.css" rel="stylesheet"/>
+    <link href="ٍEnter.Dashbaord.styles.css" rel="stylesheet"/>
 
-    <link href="manifest.json" rel="manifest" />
-    <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
-    <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
+    <link href="manifest.json" rel="manifest"/>
+    <link href="icon-512.png" rel="apple-touch-icon" sizes="512x512"/>
+    <link href="icon-192.png" rel="apple-touch-icon" sizes="192x192"/>
 </head>
 
-<body >
-    <div id="app" class="">
-        <svg class="loading-progress">
-            <circle r="40%" cx="50%" cy="50%" />
-            <circle r="40%" cx="50%" cy="50%" />
-        </svg>
-        <div class="loading-progress-text"></div>
-    </div>
+<body>
+<div class="" id="app">
+    <svg class="loading-progress">
+        <circle cx="50%" cy="50%" r="40%"/>
+        <circle cx="50%" cy="50%" r="40%"/>
+    </svg>
+    <div class="loading-progress-text"></div>
+</div>
 
-    <div id="blazor-error-ui">
-        An unhandled error has occurred.
-        <a href="" class="reload">Reload</a>
-        <a class="dismiss">🗙</a>
-    </div>
-    <script src="_framework/blazor.webassembly.js"></script>
-    <script>navigator.serviceWorker.register('service-worker.js');</script>
+<div id="blazor-error-ui">
+    An unhandled error has occurred.
+    <a class="reload" href="">Reload</a>
+    <a class="dismiss">🗙</a>
+</div>
+<script src="_framework/blazor.webassembly.js"></script>
+<script>navigator.serviceWorker.register('service-worker.js');</script>
 </body>
 
 </html>
